--- a/PokeDex3/PokeDex3/Base.lproj/Main.storyboard
+++ b/PokeDex3/PokeDex3/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--PokedexVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="PokedexVC" customModule="PokeDex3" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,107 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8YB-4f-Zvr">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
+                                <color key="backgroundColor" red="0.89168294270833337" green="0.0" blue="0.17027452256944445" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="qFb-6d-uS6"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="iBd-yq-ozi">
+                                <rect key="frame" x="0.0" y="65" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="IAy-wv-ELk"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="jTM-8t-1n4">
+                                <rect key="frame" x="0.0" y="109" width="375" height="558"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Zy6-5C-02E">
+                                <rect key="frame" x="20" y="129" width="335" height="518"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hoe-UB-Xdo">
+                                    <size key="itemSize" width="105" height="105"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.80000000000000004" contentMode="center" reuseIdentifier="pokeCell" id="5QI-2Z-rPb" customClass="PokeCell" customModule="PokeDex3" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4" translatesAutoresizingMaskIntoConstraints="NO" id="52I-eD-M9R">
+                                                    <rect key="frame" x="0.0" y="0.0" width="105" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="Jnf-Dk-Mfz"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Charmander" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jXA-FS-IZ9">
+                                                    <rect key="frame" x="0.0" y="78" width="105" height="27"/>
+                                                    <color key="backgroundColor" red="0.89168294270833337" green="0.0" blue="0.17027452256944445" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="27" id="uM4-dj-ujM"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="jXA-FS-IZ9" firstAttribute="leading" secondItem="5QI-2Z-rPb" secondAttribute="leading" id="0be-4H-F2g"/>
+                                            <constraint firstAttribute="trailing" secondItem="jXA-FS-IZ9" secondAttribute="trailing" id="9SC-3V-zQX"/>
+                                            <constraint firstAttribute="bottom" secondItem="jXA-FS-IZ9" secondAttribute="bottom" id="A0x-ik-jaS"/>
+                                            <constraint firstItem="52I-eD-M9R" firstAttribute="leading" secondItem="5QI-2Z-rPb" secondAttribute="leading" id="E4n-Nh-QMu"/>
+                                            <constraint firstAttribute="bottom" secondItem="52I-eD-M9R" secondAttribute="bottom" constant="25" id="Kqs-bf-r97"/>
+                                            <constraint firstItem="jXA-FS-IZ9" firstAttribute="centerX" secondItem="5QI-2Z-rPb" secondAttribute="centerX" id="bt4-rr-0Ds"/>
+                                            <constraint firstAttribute="trailing" secondItem="52I-eD-M9R" secondAttribute="trailing" id="v0Y-ae-SvG"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="nameLbl" destination="jXA-FS-IZ9" id="Fz7-og-ZjS"/>
+                                            <outlet property="thumbImg" destination="52I-eD-M9R" id="PyQ-ig-EHC"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Zy6-5C-02E" secondAttribute="trailing" constant="20" id="0Y6-WI-Mph"/>
+                            <constraint firstItem="Zy6-5C-02E" firstAttribute="top" secondItem="iBd-yq-ozi" secondAttribute="bottom" constant="20" id="1TT-lu-Sh8"/>
+                            <constraint firstItem="jTM-8t-1n4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="5F7-w6-QWM"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Zy6-5C-02E" secondAttribute="bottom" constant="20" id="7HX-ju-obI"/>
+                            <constraint firstItem="8YB-4f-Zvr" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="F4T-Jt-WrA"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="jTM-8t-1n4" secondAttribute="bottom" id="FRq-Io-sh8"/>
+                            <constraint firstItem="Zy6-5C-02E" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="HRP-li-ZrE"/>
+                            <constraint firstItem="iBd-yq-ozi" firstAttribute="top" secondItem="8YB-4f-Zvr" secondAttribute="bottom" id="JrD-A2-1UN"/>
+                            <constraint firstAttribute="trailing" secondItem="jTM-8t-1n4" secondAttribute="trailing" id="PkC-fQ-89e"/>
+                            <constraint firstItem="iBd-yq-ozi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Ru8-sN-z38"/>
+                            <constraint firstAttribute="trailing" secondItem="iBd-yq-ozi" secondAttribute="trailing" id="af1-nP-8Eo"/>
+                            <constraint firstItem="jTM-8t-1n4" firstAttribute="top" secondItem="iBd-yq-ozi" secondAttribute="bottom" id="g84-nO-Sgw"/>
+                            <constraint firstItem="8YB-4f-Zvr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="gq9-DE-3rm"/>
+                            <constraint firstItem="8YB-4f-Zvr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iBo-E5-SH5"/>
+                            <constraint firstAttribute="trailing" secondItem="8YB-4f-Zvr" secondAttribute="trailing" id="opH-Tn-KAY"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collection" destination="Zy6-5C-02E" id="lBn-ZN-2ai"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="37.331334332833585"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="4" width="120" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+    </resources>
 </document>
